Fixed typos in the Valve definitions

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -340,8 +340,8 @@ Valve.3 = Name:Engine3LPValve#OpeningTime:3#Circuit:3#DestinationLine:Eng3LPValv
 Valve.4 = Name:Engine4LPValve#OpeningTime:3#Circuit:4#DestinationLine:Eng4LPValveToEng4
 Valve.5 = Name:FeedTank1FwdTransferValve1#Circuit:5#DestinationLine:FeedTank1FwdXferValve1ToFeedTank1
 Valve.6 = Name:FeedTank2FwdTransferValve1_1#Circuit:6#DestinationLine:FeedTank2FwdXferValve1_1ToFeedTank2
-Valve.7 = Name:FeedTank3FwdTransferValve1_1#Circuit:7DestinationLine:FeedTank3FwdXferValve1_1ToFeedTank3
-Valve.8 = Name:FeedTank2FwdTransferValve1_2#Circuit:8DestinationLine:FeedTank2FwdXferValve1_2ToFeedTank2
+Valve.7 = Name:FeedTank3FwdTransferValve1_1#Circuit:7#DestinationLine:FeedTank3FwdXferValve1_1ToFeedTank3
+Valve.8 = Name:FeedTank2FwdTransferValve1_2#Circuit:8#DestinationLine:FeedTank2FwdXferValve1_2ToFeedTank2
 Valve.9 = Name:FeedTank3FwdTransferValve1_2#Circuit:9#DestinationLine:FeedTank3FwdXferValve1_2ToFeedTank3
 Valve.10 = Name:FeedTank4FwdTransferValve1#Circuit:10#DestinationLine:FeedTank4FwdXferValve1ToFeedTank4
 Valve.11 = Name:FeedTank1FwdTransferValve2#Circuit:11#DestinationLine:FeedTank1FwdXferValve2ToFeedTank1
@@ -349,9 +349,9 @@ Valve.12 = Name:FeedTank2FwdTransferValve2_1#Circuit:12#DestinationLine:FeedTank
 Valve.13 = Name:FeedTank3FwdTransferValve2_1#Circuit:13#DestinationLine:FeedTank3FwdXferValve2_1ToFeedTank3
 Valve.14 = Name:FeedTank2FwdTransferValve2_2#Circuit:14#DestinationLine:FeedTank2FwdXferValve2_2ToFeedTank2
 Valve.15 = Name:FeedTank3FwdTransferValve2_2#Circuit:15#DestinationLine:FeedTank3FwdXferValve2_2ToFeedTank3
-Valve.16 = Name:FeedTank4FwdTransferValve2#Circuit:16DestinationLine:FeedTank4FwdXferValve2ToFeedTank4
+Valve.16 = Name:FeedTank4FwdTransferValve2#Circuit:16#DestinationLine:FeedTank4FwdXferValve2ToFeedTank4
 Valve.17 = Name:LeftInnerFwdTransferValve#Circuit:17#DestinationLine:LeftInnerFwdXferValveToLeftInnerTank
-Valve.18 = Name:LeftMidFwdTransferValve#Circuit:18DestinationLine:LeftMidFwdXferValveToLeftMidTank
+Valve.18 = Name:LeftMidFwdTransferValve#Circuit:18#DestinationLine:LeftMidFwdXferValveToLeftMidTank
 Valve.19 = Name:LeftOuterFwdTransferValve#Circuit:19#DestinationLine:LeftOuterFwdXferValveToLeftOuterTank
 Valve.20 = Name:RightInnerFwdTransferValve#Circuit:20#DestinationLine:RightInnerFwdXferValveToRightInnerTank
 Valve.21 = Name:RightMidFwdTransferValve#Circuit:21#DestinationLine:RightMidFwdXferValveToRightMidTank
@@ -363,7 +363,7 @@ Valve.26 = Name:FeedTank4AftTransferValve1#Circuit:26#DestinationLine:FeedTank4A
 Valve.27 = Name:FeedTank1AftTransferValve2#Circuit:27#DestinationLine:FeedTank1AftXferValve2ToFeedTank1
 Valve.28 = Name:FeedTank2AftTransferValve2#Circuit:28#DestinationLine:FeedTank2AftXferValve2ToFeedTank2
 Valve.29 = Name:FeedTank3AftTransferValve2#Circuit:29#DestinationLine:FeedTank3AftXferValve2ToFeedTank3
-Valve.30 = Name:FeedTank4AftTransferValve2#Circuit:30DestinationLine:FeedTank4AftXferValve2ToFeedTank4
+Valve.30 = Name:FeedTank4AftTransferValve2#Circuit:30#DestinationLine:FeedTank4AftXferValve2ToFeedTank4
 Valve.31 = Name:LeftInnerAftTransferValve1#Circuit:31#DestinationLine:LeftInnerAftTransferValve1ToLeftInnerAftXferValve2
 Valve.32 = Name:LeftMidAftTransferValve1#Circuit:32#DestinationLine:LeftMidAftTransferValve1ToLeftMidAftXferValve2
 Valve.33 = Name:LeftOuterAftTransferValve1#Circuit:33
