fixed oversight and typo and fixed issue with the fuel page

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -314,7 +314,7 @@ Line.149 = Name:TrimTankInletValve2ToTrimTank#Source:TrimTankInletValve2#Destina
 Line.150 = Name:TrimLineJunction2ToTrimLineIsoValveAft_2#Source:TrimLineJunction2#Destination:TrimLineIsolationValveAft_2; Used for CG trim tank transfers
 Line.151 = Name:TrimLineJunction1ToTrimTankInletValve2#Source:TrimLineJunction1#Destination:TrimTankInletValve2
 Line.152 = Name:TrimLineIsoValveAft_2ToAftGalleryJunction1#Source:TrimLineIsolationValveAft_2#Destination:AftGalleryJunction1
-Line.153 = Name:AftGalleryJunction1ToAftGalleryJunction2#SourceAftGalleryJunction1#Destination:AftGalleryJunction2
+Line.153 = Name:AftGalleryJunction1ToAftGalleryJunction2#Source:AftGalleryJunction1#Destination:AftGalleryJunction2
 
 Junction.1 = Name:Junction1#InputOnlyLines:Pump1Feed1ToJunc1,Pump2Feed1ToJunc1#OutputOnlyLines:Junc1ToEng1LPValve
 Junction.2 = Name:Junction2#InputOnlyLines:Pump1Feed2ToJunc2,Pump2Feed2ToJunc2#OutputOnlyLines:Junc2ToEng2LPValve
