fixed typo again

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -376,7 +376,7 @@ Valve.39 = Name:LeftOuterAftTransferValve2#Circuit:39
 Valve.40 = Name:RightInnerAftTransferValve2#Circuit:40#DestinationLine:RightInnerAftXferValve2ToRightInnerTank
 Valve.41 = Name:RightMidAftTransferValve2#Circuit:41#DestinationLine:RightMidAftXferValve2ToRightMidTank
 Valve.42 = Name:RightOuterAftTransferValve2#Circuit:42
-Valve.43 = Name:TrimTankInletValve1#Circuit:43#DestinationLine:TrimTankInletValve1ToTrimTank#Source
+Valve.43 = Name:TrimTankInletValve1#Circuit:43#DestinationLine:TrimTankInletValve1ToTrimTank
 Valve.44 = Name:TrimLineIsolationValveFwd#Circuit:44#DestinationLine:TrimLineIsoValveFwdToFwdGalleryJunction
 Valve.45 = Name:TrimLineIsolationValveAft_1#Circuit:45#DestinationLine:TrimLineIsoValveAft_1ToAftGalleryJunction1
 Valve.46 = Name:CrossFeedValve1#OpeningTime:3#Circuit:46
