update after vote

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/GSX.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/GSX.cfg
@@ -12,12 +12,12 @@ ignoreicing = 0
 iscargo = 0
 trafficcones = 1
 preferredexit =  0
-wingrootpos = 7.23 0.49 3.33
-wingtippos = 24.45 -6.42 3.33
+wingrootpos = 7.23 0.50 0.58
+wingtippos = 24.45 -6.42 2.58
 fuelpos = -18.82 3.00 1.78
 waterpos = 0.40 -8.69 -1.94
 lavatorypos = -0.28 -18.20 -0.63
-gpupos = 0.54 29.18 -1.48
+gpupos = 0.54 29.31 -1.49
 bypasspinpos = 0.00 30.46 -0.09
 engine1pos = -25.78 3.39 2.34
 engine2pos = 14.91 11.27 -1.08
@@ -27,43 +27,43 @@ engine5pos = 0.00 0.00 0.00
 engine6pos = 0.00 0.00 0.00
 
 [exit1]
-pos = -2.96 28.89 0.69 7.00
+pos = -2.96 28.88 1.69 9.00
 code = 1
-name = Passenger Door
+name = Exit 1
 ceiling = 1.8
 embeddedStair = 0
 
 [exit2]
-pos = -3.50 18.61 1.12 0.00
+pos = -3.54 14.24 3.88 0.00
 code = 2
 name = Exit 2
 ceiling = 1.8
 embeddedStair = 0
 
 [exit3]
-pos = -3.50 14.22 3.60 0.00
+pos = -3.50 -9.64 1.01 0.00
 code = 3
 name = Exit 3
 ceiling = 1.8
 embeddedStair = 0
 
 [exit4]
-pos = -3.11 -18.64 0.96 -6.00
+pos = -3.13 -18.64 0.96 -5.00
 code = 4
-name = Passenger Aft Door
+name = Exit 4
 ceiling = 1.8
 embeddedStair = 0
 
 [service1]
-pos = 3.02 28.84 0.91 -8.00
-code = 5
-name = Exit 5
+pos = 3.53 18.67 1.11 -1.00
+code = 3
+name = Exit 3
 ceiling = 1.8
 embeddedStair = 0
 
 [service2]
-pos = 3.56 18.69 0.92 0.00
-code = 8
+pos = 3.45 14.23 3.90 -1.00
+code = 4
 name = Service Door AFT
 ceiling = 1.8
 embeddedStair = 0
@@ -71,22 +71,22 @@ embeddedStair = 0
 [cargo1]
 pos = 1.49 23.36 -1.16 -0.39
 code = 6
-name = Cargo Door
+name = Cargo Door A380X
 ceiling = 1.8
 embeddedStair = 0
-uldcode = PMC,PALLET5
+uldcode = PMC,PALLET4
 
 [cargo2]
 pos = 1.53 -13.14 -1.06 2.61
-code = 7
+code = 6
 name = Cargo Door
 ceiling = 1.8
 embeddedStair = 0
 uldcode = AKE
 
 [cargomain]
-pos = 2.15 -16.01 -0.73 13.00
-code = 9
+pos = 2.01 -16.12 -0.73 13.00
+code = 1
 name = Exit 1
 ceiling = 1.8
 embeddedStair = 0
