--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -19,7 +19,7 @@
 
 ; 13 Sept 2024 fixed some invalid entries in the trigger section
 
-; 13 Oct 2024 Fixed numerous issues with the fuel system
+; 22 Oct 2024 Fixed numerous issues with the fuel system. Code added to address MSFS fuel system issues and restrict transfers until airplane is in flight.
 
 [VERSION]
 major = 1
@@ -329,7 +329,7 @@ Junction.8 = Name:FeedTanks2_3Junction1#InputOnlyLines:FwdGalleryJuncToFeedTanks
 
 Junction.9 = Name:FeedTanks2_3Junction2#InputOnlyLines:FwdGalleryJuncToFeedTanks2_3Junc2#OutputOnlyLines:FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_1,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_1,FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_2,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_2#Option:FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_1,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_1#Option:FeedTanks2_3Junc2ToFeedTank2FwdXferValve2_2,FeedTanks2_3Junc2ToFeedTank3FwdXferValve2_2#Option:FwdGalleryJuncToFeedTanks2_3Junc2
 
-Junction.10 = Name:AftGalleryJunction1#InputOnlyLines:LeftMidTankPumpAftToAftGalleryJunction1,LeftInnerTankPumpAftToAftGalleryJunction1,RightMidTankPumpAftToAftGalleryJunction1,RightInnerTankPumpAftToAftGalleryJunction1,TrimLineIsoValveAft_1ToAftGalleryJunction1,TrimLineIsoValveAft_2ToAftGalleryJunction1#OutputOnlyLines:AftGalleryJunction1ToAftGalleryJunction2,AftGalleryJunction1ToLeftInnerAftXferValve1,AftGalleryJunction1ToLeftMidAftXferValve1,AftGalleryJunction1ToLeftOuterAftXferValve1,AftGalleryJunction1ToRightInnerAftXferValve1,AftGalleryJunction1ToRightMidAftXferValve1,AftGalleryJunction1ToRightOuterAftXferValve1,AftGalleryJunction1ToJetissonNozzleValveLeft,AftGalleryJunction1ToJetissonNozzleValveRight#Option:AftGalleryJunction1ToLeftInnerAftXferValve1,AftGalleryJunction1ToRightInnerAftXferValve1#Option:AftGalleryJunction1ToLeftMidAftXferValve1,AftGalleryJunctionToRightMidAftXferValve1#Option:AftGalleryJunction1ToAftGalleryJunction2
+Junction.10 = Name:AftGalleryJunction1#InputOnlyLines:LeftMidTankPumpAftToAftGalleryJunction1,LeftInnerTankPumpAftToAftGalleryJunction1,RightMidTankPumpAftToAftGalleryJunction1,RightInnerTankPumpAftToAftGalleryJunction1,TrimLineIsoValveAft_1ToAftGalleryJunction1,TrimLineIsoValveAft_2ToAftGalleryJunction1#OutputOnlyLines:AftGalleryJunction1ToAftGalleryJunction2,AftGalleryJunction1ToLeftInnerAftXferValve1,AftGalleryJunction1ToLeftMidAftXferValve1,AftGalleryJunction1ToLeftOuterAftXferValve1,AftGalleryJunction1ToRightInnerAftXferValve1,AftGalleryJunction1ToRightMidAftXferValve1,AftGalleryJunction1ToRightOuterAftXferValve1,AftGalleryJunction1ToJetissonNozzleValveLeft,AftGalleryJunction1ToJetissonNozzleValveRight#Option:AftGalleryJunction1ToLeftInnerAftXferValve1,AftGalleryJunction1ToRightInnerAftXferValve1#Option:AftGalleryJunction1ToLeftMidAftXferValve1,AftGalleryJunction1ToRightMidAftXferValve1#Option:AftGalleryJunction1ToAftGalleryJunction2
 Junction.11 = Name:AftGalleryJunction2#InputOnlyLines:AftGalleryJunction1ToAftGalleryJunction2#OutputOnlyLines:AftGalleryJunction2ToFeedTank1AftXferValve1,AftGalleryJunction2ToFeedTank2AftXferValve1,AftGalleryJunction2ToFeedTank3AftXferValve1,AftGalleryJunction2ToFeedTank4AftXferValve1
 Junction.12 = Name:CrossFeedJunc1
 Junction.13 = Name:CrossFeedJunc2
