GSX config update

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/GSX.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/GSX.cfg
@@ -27,67 +27,67 @@ engine5pos = 0.00 0.00 0.00
 engine6pos = 0.00 0.00 0.00
 
 [exit1]
-pos = -2.96 28.88 1.69 9.00
+pos = -3.08 28.90 0.94 9.00
 code = 1
-name = Exit 1
+name = Door M1L
 ceiling = 1.8
 embeddedStair = 0
 
 [exit2]
-pos = -3.54 14.24 3.88 0.00
-code = 2
-name = Exit 2
+pos = -3.53 18.63 0.90 0.00
+code = 3
+name = Door M2L
 ceiling = 1.8
 embeddedStair = 0
 
 [exit3]
 pos = -3.50 -9.64 1.01 0.00
-code = 3
-name = Exit 3
+code = 7
+name = Door M4L
 ceiling = 1.8
 embeddedStair = 0
 
 [exit4]
-pos = -3.13 -18.64 0.96 -5.00
-code = 4
-name = Exit 4
+pos = -3.13 -18.64 0.96 -7.00
+code = 9
+name = Door M5L
 ceiling = 1.8
 embeddedStair = 0
 
 [service1]
 pos = 3.53 18.67 1.11 -1.00
-code = 3
-name = Exit 3
+code = 4
+name = Catering Door M2R
 ceiling = 1.8
 embeddedStair = 0
 
 [service2]
 pos = 3.45 14.23 3.90 -1.00
-code = 4
-name = Service Door AFT
+code = 12
+name = Catering Door U1R
 ceiling = 1.8
 embeddedStair = 0
 
 [cargo1]
 pos = 1.49 23.36 -1.16 -0.39
-code = 6
-name = Cargo Door A380X
+code = (L:A32NX_FWD_DOOR_CARGO_POSITION, number) 80 >
+name = FWD Cargo Door
 ceiling = 1.8
 embeddedStair = 0
-uldcode = PMC,PALLET4
+uldcode = AAF,AAP,AKE,ALF,ALP,AMP,PLA,PMC,QKE
 
 [cargo2]
-pos = 1.53 -13.14 -1.06 2.61
-code = 6
-name = Cargo Door
+pos = 1.62 -13.27 -0.81 0.61
+code = (L:A32NX_AFT_DOOR_CARGO_POSITION, number) 80 >
+name = AFT Cargo Door
 ceiling = 1.8
 embeddedStair = 0
-uldcode = AKE
+uldcode = AAF,AAP,AKE,ALF,ALP,AMP,PLA,PMC,QKE
 
 [cargomain]
 pos = 2.01 -16.12 -0.73 13.00
-code = 1
-name = Exit 1
+code = (L:A32NX_AFT_DOOR_CARGO_POSITION, number) 80 >
+name = Bulk Cargo Door
 ceiling = 1.8
 embeddedStair = 0
 uldcode = BELT
