--- a/tools/fdr2csv/Cargo.toml
+++ b/tools/fdr2csv/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fdr2csv-a380x"
+name = "fdr2csv"
 version = "0.1.0"
 authors = ["FlyByWire Simulations"]
 edition = "2021"
@@ -7,14 +7,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-bindgen = "0.69.5"
+bindgen = "0.69.4"
 
 [dependencies]
-fdr2csv_common = { path = "../common" }
-
-clap = { version = "4.5.20", features = ["derive"] }
-serde = { version = "1.0.213", features = ["derive"] }
-bytemuck = { version = "1.19.0", features = ["derive"] }
+clap = { version = "4.5.9", features = ["derive"] }
+serde = { version = "1.0.204", features = ["derive"] }
+bytemuck = { version = "1.16.1", features = ["derive"] }
 
 csv = "1.3.0"
 flate2 = "1.0.30"
