--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -775,7 +775,7 @@ pitch_scalar = 0 ; Scalar coefficient to ponderate global flap pitch coef (non d
 max_on_ground_position = 5 ; Dynamically set in-tool to last flap-position index by defaut when -1 is found.
 flaps-position.0 =  0.00,  -1, 0.00, 0.00 ; CONF 0
 flaps-position.1 =  0.01,  -1, 1.00, 1.00, 1.00, 0.00 -1.00 ; CONF 1
-flaps-position.2 = 8.00, 222, 1.00, 1.001.00, 0.00 -1.00 ; CONF 1+F
+flaps-position.2 = 8.00, 222, 1.00, 1.00, 1.00, 0.00 -1.00 ; CONF 1+F
 flaps-position.3 = 17.00, 220, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF 2
 flaps-position.4 = 26.00, 196, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF 3
 flaps-position.5 = 32.00, 182, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF FULL
@@ -818,4 +818,4 @@ flaps-position.1 = 20.00, 263, 1.85, 0.55, 1.00, 0.00 -1.00 ; CONF 1
 flaps-position.2 = 20.01, 222, 0.70, 0.99, 1.00, 0.00 -1.00 ; CONF 1+F
 flaps-position.3 = 20.02, 220, 1.30, 1.16, 1.00, 0.00 -1.00 ; CONF 2
 flaps-position.4 = 23.00, 196, 1.50, 1.15, 1.00, 0.00 -1.00 ; CONF 3
-flaps-position.5 = 23.01, 182, 1.00, 1.00, 1.00, 0.00 ; CONF FULL
+flaps-position.5 = 23.01, 182, 1.00, 1.00, 1.00, 0.00 -1.00 ; CONF FULL
