--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -645,6 +645,9 @@ lift_coef_at_drag_zero_flaps = 0.40000
 ;elevator_lift_coef = 0.5 ; Defines elevator lift vs elevator angle-of-attack
 ;rudder_lift_coef = 0.5 ; Defines rudder lift vs rudder angle-of-attack
 ;fuselage_lateral_cx = 0.5; Defines fuselage lift and side force vs fuselage angle-of-attack and beta
+StallDef_StartRatio = 1
+StallDef_EndRatio = 2
+StallDef_airflowdetachspeed = 0.1
 
 [FLIGHT_TUNING]
 
