--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -151,6 +151,13 @@ background_color = 0,0,0
 
 htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 
+[VCockpit20]
+size_mm=1280,1024
+pixel_size=1280,1024
+texture=$HUD
+hud=2, 0, 5, 35, 28
+htmlgauge00=A32NX/HUD/HUD.html?Index=1, 0,0,1280,1024
+
 [VPainting01]
 size_mm = 2048,512
 texture = $RegistrationNumber
