--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -549,7 +549,7 @@ fly_by_wire = 0 ; Fly-by-wire available true/false
 elevator_elasticity_table = 0:1, 400:1
 aileron_elasticity_table = 0:1, 400:1
 rudder_elasticity_table = 0:1, 400:1
-elevator_trim_elasticity_table = 0:0.1, 100:0.2, 130:0.75, 150:1, 400:1
+elevator_trim_elasticity_table = 0:0.45, 50:0.7, 100:1.04, 115:1.5, 400:5.7
 ;controls_reactivity_scalar = 1 ; Reactivity scalar for all controls
 
 
@@ -636,7 +636,7 @@ yaw_moment_delta_rudder_mach_table = 0:0
 yaw_moment_delta_aileron_mach_table = 0:0
 yaw_moment_yaw_rate_mach_table = 0:0
 yaw_moment_roll_rate_mach_table = 0:0
-elevator_scaling_table = 0:1 ; scales control based on its deflection
+elevator_scaling_table = -0.35:3.0, -0.3:2.5, -0.26:1.5, -0.1:1, 0:1, 0.55:1 ; scales control based on its deflection
 aileron_scaling_table = 0:1 ; scales control based on its deflection
 rudder_scaling_table = 0:1 ; scales control based on its deflection
 aileron_load_factor_effectiveness_table = 0:1 ; scaling of roll_moment_delta_aileron versus gravity forces, G effects on aileron effectiveness, acts on roll_moment_delta_aileron
@@ -777,11 +777,11 @@ drag_scalar = 0 ; Scalar coefficient to ponderate global flap drag coef (non dim
 pitch_scalar = 0 ; Scalar coefficient to ponderate global flap pitch coef (non dimensioned)
 max_on_ground_position = 5 ; Dynamically set in-tool to last flap-position index by defaut when -1 is found.
 flaps-position.0 =  0.00,  -1, 0.00, 0.00 ; CONF 0
-flaps-position.1 =  0.01,  -1, 1.00, 1.00, 1.00, 0.00 -1.00 ; CONF 1
-flaps-position.2 = 8.00, 222, 1.00, 1.00, 1.00, 0.00 -1.00 ; CONF 1+F
-flaps-position.3 = 17.00, 220, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF 2
-flaps-position.4 = 26.00, 196, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF 3
-flaps-position.5 = 32.00, 182, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF FULL
+flaps-position.1 =  0.01,  -1, 1.00, 1.00, 1.00, 0.00 0.00 ; CONF 1
+flaps-position.2 = 8.00, 222, 1.00, 1.00, 1.00, 0.00 0.00 ; CONF 1+F
+flaps-position.3 = 17.00, 220, 1.00, 1.00 1.00, 0.00 0.00 ; CONF 2
+flaps-position.4 = 26.00, 196, 1.00, 1.00 1.00, 0.00 0.00 ; CONF 3
+flaps-position.5 = 32.00, 182, 1.00, 1.00 1.00, 0.00 -0.40 ; CONF FULL
 
 [FLAPS.1]
 type = 1 ; Flap type 0 = None, 1 = trailing edge, 2 = leading edge
@@ -797,11 +797,11 @@ drag_scalar = 1 ; Scalar coefficient to ponderate global flap drag coef (non dim
 pitch_scalar = 1 ; Scalar coefficient to ponderate global flap pitch coef (non dimensioned)
 max_on_ground_position = 5 ; Dynamically set in-tool to last flap-position index by defaut when -1 is found.
 flaps-position.0 =  0.00,  -1, 0, 0.0 ; CONF 0
-flaps-position.1 =  5.0,  -1, 1.00, 1.00 1.00, 0.00 -1.00 ; CONF 1
-flaps-position.2 = 10.00, 222, 0.70, 1.05, 1.00, 0.00 -1.00 ; CONF 1+F
-flaps-position.3 = 15.00, 220, 1.30, 1.20, 1.00, 0.00 -1.00 ; CONF 2
-flaps-position.4 = 20.00, 196, 1.50, 1.17, 1.00, 0.00 -1.00 ; CONF 3
-flaps-position.5 = 32.00, 182, 1.00, 1.02 1.00, 0.00 -1.00 ; CONF FULL
+flaps-position.1 =  5.0,  -1, 1.00, 1.00 1.00, 0.00 0.00 ; CONF 1
+flaps-position.2 = 10.00, 222, 0.70, 1.05, 1.00, 0.00 0.00 ; CONF 1+F
+flaps-position.3 = 15.00, 220, 1.30, 1.20, 1.00, 0.00 0.00 ; CONF 2
+flaps-position.4 = 20.00, 196, 1.50, 1.17, 1.00, 0.00 0.00 ; CONF 3
+flaps-position.5 = 32.00, 182, 1.00, 1.02 1.00, 0.00 -0.40 ; CONF FULL
 
 [FLAPS.2]
 type = 2 ; Flap type 0 = None, 1 = trailing edge, 2 = leading edge
@@ -817,8 +817,8 @@ drag_scalar = 0.5 ; Scalar coefficient to ponderate global flap drag coef (non d
 pitch_scalar = 1 ; Scalar coefficient to ponderate global flap pitch coef (non dimensioned)
 max_on_ground_position = 5 ; Dynamically set in-tool to last flap-position index by defaut when -1 is found.
 flaps-position.0 =  0.00,  -1, 1.00, 1.00 ; CONF 0
-flaps-position.1 = 20.00, 263, 1.85, 0.55, 1.00, 0.00 -1.00 ; CONF 1
-flaps-position.2 = 20.01, 222, 0.70, 0.99, 1.00, 0.00 -1.00 ; CONF 1+F
-flaps-position.3 = 20.02, 220, 1.30, 1.16, 1.00, 0.00 -1.00 ; CONF 2
-flaps-position.4 = 23.00, 196, 1.50, 1.15, 1.00, 0.00 -1.00 ; CONF 3
-flaps-position.5 = 23.01, 182, 1.00, 1.00, 1.00, 0.00 -1.00 ; CONF FULL
+flaps-position.1 = 20.00, 263, 1.85, 0.55, 1.00, 0.00 0.00 ; CONF 1
+flaps-position.2 = 20.01, 222, 0.70, 0.99, 1.00, 0.00 0.00 ; CONF 1+F
+flaps-position.3 = 20.02, 220, 1.30, 1.16, 1.00, 0.00 0.00 ; CONF 2
+flaps-position.4 = 23.00, 196, 1.50, 1.15, 1.00, 0.00 0.00 ; CONF 3
+flaps-position.5 = 23.01, 182, 1.00, 1.00, 1.00, 0.00 -0.40 ; CONF FULL
