--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -377,11 +377,11 @@ jobs:
           assets_path: ./${{ env.BUILD_DIR_NAME }}/
       - name: Count Standalone Download files
         run: |
-          if [ "$(ls -1 ./${{ env.BUILD_DIR_NAME }} | wc -l)" -eq 2 ]; then
-            echo "Standalone Download is split in 2 parts"
+          if [ "$(ls -1 ./${{ env.BUILD_DIR_NAME }} | wc -l)" -eq 1 ]; then
+            echo "Standalone Download is not split"
           else
             ls -1 ./${{ env.BUILD_DIR_NAME }}| wc -l
-            echo "Error: The number of standalone download parts is not 2. Adjust all download references and workflows for the new number of parts!" >&2
+            echo "Error: The number of standalone download parts is not 1. Adjust all download references and workflows for the new number of parts!" >&2
             exit 1
           fi
       - name: Delete old GitHub pre-release assets
