Move BatDisplay to fbw_shared. Add to A32NX

--- a/fbw-a380x/src/systems/instruments/src/BAT/tsconfig.json
+++ b/fbw-a380x/src/systems/instruments/src/BAT/tsconfig.json
@@ -13,5 +13,8 @@
     "jsxFactory": "FSComponent.buildComponent" /* Required for FSComponent framework JSX */,
     "jsxFragmentFactory": "FSComponent.Fragment" /* Required for FSComponent framework JSX */,
     "jsx": "react", /* Required for FSComponent framework JSX */
+    "paths": {
+      "@shared/battery/*": ["../../../fbw-common/src/systems/instruments/src/BAT/*"],
+    }
   }
 }
