--- a/fbw-common/src/systems/instruments/src/Clock/tsconfig.json
+++ b/fbw-common/src/systems/instruments/src/Clock/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../tsconfig.json",
 
   "compilerOptions": {
     "incremental": false /* Enables incremental builds */,
