--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -123,7 +123,7 @@ htmlgauge00=A380X/BAT/bat.html, 0,0,256,128
 [VCockpit15]
 size_mm=1430,1000
 pixel_size=1430,1000
-texture=$SCREEN_EFB
+texture=;FIX ME (Add the proper texture link that corresponds with the OIS/OIT screen in the .blend file)
 
 htmlgauge00=A380X/EFB/efb.html, 0,0,1430,1000
 
