Update texture files and add a new "VCockpit" section for the OIS

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -123,7 +123,7 @@ htmlgauge00=A380X/BAT/bat.html, 0,0,256,128
 [VCockpit15]
 size_mm=1430,1000
 pixel_size=1430,1000
-texture=;FIX ME (Add the proper texture link that corresponds with the OIS/OIT screen in the .blend file)
+texture=;FIX ME (Add the proper EFB texture back)
 
 htmlgauge00=A380X/EFB/efb.html, 0,0,1430,1000
 
@@ -174,3 +174,10 @@ texture=NO_TEXTURE
 background_color=0,0,0
 
 htmlgauge04=A380X/ExtrasHost/extras-host.html
+
+[VCockpit22]
+size_mm=1430,1000
+pixel_size=1430,1000
+texture=;FIX ME (Add the OIS texture in)
+
+htmlgauge00=A380X/EFB/efb.html, 0,0,1430,1000 ;FIXME (don't build certain EFB pages)
