--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -178,6 +178,13 @@ htmlgauge04=A380X/ExtrasHost/extras-host.html
 [VCockpit22]
 size_mm=1430,1000
 pixel_size=1430,1000
-texture=;FIX ME (Add the OIS texture in)
+texture=$SCREEN_OIT_LEFT
 
-htmlgauge00=A380X/EFB/efb.html, 0,0,1430,1000 ;FIXME (don't build certain EFB pages)
+htmlgauge00=A380X/oit.html, 0,0,1430,1000 ;this html file path may not be correct (Check this over)
+
+[VCockpit23]
+size_mm=1430,1000
+pixel_size=1430,1000
+texture=$SCREEN_OIT_RIGHT
+
+htmlgauge00=A380X/OIT/oit.html, 0,0,1430,1000 ;this html file path may not be correct (Check this over)
